erDiagram
    ORGANISERS ||--o{ EVENTS : creates
    EVENTS ||--o{ CATEGORIES : has
    CATEGORIES ||--o{ ENROLMENTS : receives
    PARTICIPANTS ||--o{ ENROLMENTS : makes
    ENROLMENTS ||--|| RESULTS : produces

    ORGANISERS {
        int OrganiserID PK
        string FullName
        string Email UK
        string PasswordHash
        string Phone
        datetime CreatedAt
    }
    PARTICIPANTS {
        int ParticipantID PK
        string FullName
        string Email UK
        string PasswordHash
        date DateOfBirth
        string Gender
        datetime CreatedAt
    }
    EVENTS {
        int EventID PK
        int OrganiserID FK
        string EventName
        date EventDate
        string Location
        string Description
    }
    CATEGORIES {
        int CategoryID PK
        int EventID FK
        string CategoryName
        decimal DistanceKm
        int MaxParticipants
        decimal EntryFee
    }
    ENROLMENTS {
        int EnrolmentID PK
        int ParticipantID FK
        int CategoryID FK
        datetime EnrolmentDate
        string Status
    }
    RESULTS {
        int ResultID PK
        int EnrolmentID FK
        time FinishTime
        int Position
        string Status
    }
